Creating Normal Map Node Crashes Blender #72269

Closed
opened 2019-12-08 03:53:20 +01:00 by Wykrhm Reddy · 5 comments

System Information
Operating system: Windows 10 Pro
Graphics card: NVIDIA GTX 980

Blender Version
Broken: 2.82 Alpha (416e66c7fe)

Short description of error

Creating a Normal Map Node in the Shader Editor crashes Blender entirely.

Exact steps for others to reproduce the error

  • Create Object.
  • Create Material
  • Go to Shader Editor > Create Normal Map Node.
  • Crash.
**System Information** Operating system: Windows 10 Pro Graphics card: NVIDIA GTX 980 **Blender Version** Broken: 2.82 Alpha (416e66c7fe21) **Short description of error** Creating a Normal Map Node in the Shader Editor crashes Blender entirely. **Exact steps for others to reproduce the error** - Create Object. - Create Material - Go to Shader Editor > Create Normal Map Node. - Crash.
Author

Added subscriber: @Wyk

Added subscriber: @Wyk
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

It happens after linking the Normal map to the shader tree.
Seems to be failing during generation of the material GLSL.

Blender 2.82 (sub 4), Unknown revision
bpy.ops.node.select(wait_to_deselect_others=True, mouse_x=350, mouse_y=258, extend=False, deselect_all=True)  # Operator
bpy.ops.node.add_search(use_transform=True, node_item='61')  # Operator
bpy.ops.node.translate_attach_remove_on_cancel(TRANSFORM_OT_translate={"value":(3.29371, 158.415, 0), "orient_type":'GLOBAL', "orient_matrix":((1, 0, 0), (0, 1, 0), (0, 0, 1)), "orient_matrix_type":'GLOBAL', "constraint_axis":(False, False, False), "mirror":True, "use_proportional_edit":False, "proportional_edit_falloff":'SMOOTH', "proportional_size":1, "use_proportional_connected":False, "use_proportional_projected":False, "snap":False, "snap_target":'CLOSEST', "snap_point":(0, 0, 0), "snap_align":False, "snap_normal":(0, 0, 0), "gpencil_strokes":False, "cursor_transform":False, "texture_space":False, "remove_on_cancel":True, "release_confirm":False, "use_accurate":False}, NODE_OT_attach={}, NODE_OT_insert_offset={})  # Operator
bpy.ops.node.select(wait_to_deselect_others=True, mouse_x=337, mouse_y=241, extend=False, deselect_all=True)  # Operator
bpy.ops.node.link(detach=False)  # Operator

backtrace
b282(BLI_system_backtrace+0x33) [0x557871bb9343]
b282(+0xea3606) [0x55787054e606]
/lib/x86_64-linux-gnu/libc.so.6(+0x43f60) [0x7f8c39064f60]
/usr/lib/x86_64-linux-gnu/libjemalloc.so.2(free+0x7b) [0x7f8c3d91f08b]
b282(+0x23edb77) [0x557871a98b77]
b282(GPU_link+0x118) [0x557871a99eb8]
b282(+0x1ba4cc1) [0x55787124fcc1]
b282(ntreeExecGPUNodes+0xf8) [0x557871256f88]
b282(ntreeGPUMaterialNodes+0x143) [0x557871256063]
b282(GPU_material_from_nodetree+0xd5) [0x557871aa71c5]
b282(DRW_shader_create_from_material+0xb5) [0x557870bc9ec5]
b282(EEVEE_material_mesh_get+0x89) [0x557870b82c19]
b282(+0x14d809f) [0x557870b8309f]
b282(EEVEE_materials_cache_populate+0x21b) [0x557870b841db]
b282(EEVEE_cache_populate+0x123) [0x557870b794a3]
b282(+0x14c10ab) [0x557870b6c0ab]
b282(DRW_draw_render_loop_ex+0x544) [0x557870b6df44]
b282(view3d_main_region_draw+0x77) [0x557871005427]
b282(ED_region_do_draw+0x811) [0x557870df4f01]
b282(wm_draw_update+0x48a) [0x5578708f47fa]
b282(WM_main+0x30) [0x5578708f1e90]
b282(main+0x2c5) [0x557870535c05]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f8c39047b6b]
b282(_start+0x2a) [0x55787054acfa]

Function gpu_node_input_link

if (link->link_type != GPU_NODE_LINK_OUTPUT) {
  MEM_freeN(link);
}
It happens after linking the Normal map to the shader tree. Seems to be failing during generation of the material GLSL. ``` Blender 2.82 (sub 4), Unknown revision bpy.ops.node.select(wait_to_deselect_others=True, mouse_x=350, mouse_y=258, extend=False, deselect_all=True) # Operator bpy.ops.node.add_search(use_transform=True, node_item='61') # Operator bpy.ops.node.translate_attach_remove_on_cancel(TRANSFORM_OT_translate={"value":(3.29371, 158.415, 0), "orient_type":'GLOBAL', "orient_matrix":((1, 0, 0), (0, 1, 0), (0, 0, 1)), "orient_matrix_type":'GLOBAL', "constraint_axis":(False, False, False), "mirror":True, "use_proportional_edit":False, "proportional_edit_falloff":'SMOOTH', "proportional_size":1, "use_proportional_connected":False, "use_proportional_projected":False, "snap":False, "snap_target":'CLOSEST', "snap_point":(0, 0, 0), "snap_align":False, "snap_normal":(0, 0, 0), "gpencil_strokes":False, "cursor_transform":False, "texture_space":False, "remove_on_cancel":True, "release_confirm":False, "use_accurate":False}, NODE_OT_attach={}, NODE_OT_insert_offset={}) # Operator bpy.ops.node.select(wait_to_deselect_others=True, mouse_x=337, mouse_y=241, extend=False, deselect_all=True) # Operator bpy.ops.node.link(detach=False) # Operator backtrace b282(BLI_system_backtrace+0x33) [0x557871bb9343] b282(+0xea3606) [0x55787054e606] /lib/x86_64-linux-gnu/libc.so.6(+0x43f60) [0x7f8c39064f60] /usr/lib/x86_64-linux-gnu/libjemalloc.so.2(free+0x7b) [0x7f8c3d91f08b] b282(+0x23edb77) [0x557871a98b77] b282(GPU_link+0x118) [0x557871a99eb8] b282(+0x1ba4cc1) [0x55787124fcc1] b282(ntreeExecGPUNodes+0xf8) [0x557871256f88] b282(ntreeGPUMaterialNodes+0x143) [0x557871256063] b282(GPU_material_from_nodetree+0xd5) [0x557871aa71c5] b282(DRW_shader_create_from_material+0xb5) [0x557870bc9ec5] b282(EEVEE_material_mesh_get+0x89) [0x557870b82c19] b282(+0x14d809f) [0x557870b8309f] b282(EEVEE_materials_cache_populate+0x21b) [0x557870b841db] b282(EEVEE_cache_populate+0x123) [0x557870b794a3] b282(+0x14c10ab) [0x557870b6c0ab] b282(DRW_draw_render_loop_ex+0x544) [0x557870b6df44] b282(view3d_main_region_draw+0x77) [0x557871005427] b282(ED_region_do_draw+0x811) [0x557870df4f01] b282(wm_draw_update+0x48a) [0x5578708f47fa] b282(WM_main+0x30) [0x5578708f1e90] b282(main+0x2c5) [0x557870535c05] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xeb) [0x7f8c39047b6b] b282(_start+0x2a) [0x55787054acfa] ``` Function `gpu_node_input_link` ``` if (link->link_type != GPU_NODE_LINK_OUTPUT) { MEM_freeN(link); }
Jeroen Bakker self-assigned this 2019-12-08 09:56:22 +01:00

This issue was referenced by 5c234a558c

This issue was referenced by 5c234a558c1ac0921f171fa38c59bb51b21e2b74

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72269
No description provided.