Fix T72269: crash with Eevee and normal maps after recent math node changes

Reusing math node functions for normal map node caused problems.